<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/time_setting">
        <EditTextPreference
            android:key="play_during"
            android:defaultValue="100"
            android:inputType="number"
            android:title="@string/during_setting" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/type_setting">
        <ListPreference
            android:key="type"
            android:defaultValue="full"
            android:entries="@array/list_preference"
            android:entryValues="@array/list_value"
            android:title="@string/type_title" />
        <ListPreference
            android:key="size"
            android:defaultValue="middle"
            android:entries="@array/size_preference"
            android:entryValues="@array/size_value"
            android:title="@string/scale_setting" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_setting">
        <Preference
            android:title="@string/bmp_setting"
            android:key="@string/album_setting">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>